tests/ui/compile-fail/init/shadowing_field.stderr
error[E0308]: mismatched types
  --> tests/ui/compile-fail/init/shadowing_field.rs:10:31
   |
10 |     let _ = init!(Foo { x, y: x });
   |             ------------------^---
   |             |                 |
   |             |                 expected `usize`, found `&mut usize`
   |             arguments to this method are incorrect
   |
help: the return type of this call is `&mut usize` due to the type of the argument passed
  --> tests/ui/compile-fail/init/shadowing_field.rs:10:13
   |
10 |     let _ = init!(Foo { x, y: x });
   |             ^^^^^^^^^^^^^^^^^^-^^^
   |                               |
   |                               this argument influences the return type of `write`
note: method defined here
  --> src/__internal.rs
   |
   |     pub fn write(self, value: T) -> UnpinnedGuard<'a, T>
   |            ^^^^^
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider dereferencing the borrow
   |
10 |     let _ = init!(Foo { x, y: *x });
   |                               +
